[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["finance", "parsing", "command-line-utilities", "config"]
description = "A Rust library to manage ISO 20022 pain.001 payment initiation messages widely used for corporate to bank payments."
edition = "2021"
homepage = ""
keywords = ["financial", "pain", "iso20022", "payments", "electronic payments"]
license = "MIT OR Apache-2.0"
name = "pain"
repository = "https://github.com/sebastienrousseau/pain/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# [[bench]]
# name = "benchmark"
# harness = false
# path = "benches/pain.rs"

[profile.bench]
debug = true

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.93"
xml-rs = "1.0.0"


[dev-dependencies]
criterion = "0.5.0"

[lib]
crate-type = ["lib"]
name = "pain"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
